--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,5 @@ monitor_speed = 115200
 framework = arduino
 lib_deps = 
 	miguelbalboa/MFRC522@^1.4.12
+	adafruit/Adafruit GFX Library@^1.12.0
+	adafruit/Adafruit SSD1306@^2.5.13
